<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/back"
            app:title="Settings"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Appearance"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorOnPrimary"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_theme"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/system_theme_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_preference"
                android:textSize="16sp"
                android:padding="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:buttonTint="@color/colorOnPrimary"
                android:textColor="?attr/colorOnBackground" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/light_theme_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme"
                android:textSize="16sp"
                android:padding="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:buttonTint="@color/colorOnPrimary"
                android:textColor="?attr/colorOnBackground" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="48dp"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/dark_theme_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:text="@string/dark_theme"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                app:buttonTint="@color/colorOnPrimary" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance_note"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance_note_content"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorSecondary"
            android:lineSpacingExtra="4dp"/>

    </LinearLayout>

</LinearLayout>
